--- a/dynamic-excel-project/dynamic-excel/pom.xml
+++ b/dynamic-excel-project/dynamic-excel/pom.xml
@@ -46,6 +46,16 @@
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
 
+		<!-- apache commons -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-collections4</artifactId>
+		</dependency>
+
 		<!-- mysql jdbc -->
 		<dependency>
 			<groupId>mysql</groupId>
