--- a/dynamic-excel-client/package.json
+++ b/dynamic-excel-client/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "build": "vue-cli-service build --mode local",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
@@ -12,6 +12,7 @@
     "@gn5r/vue-common-confirm": "^2.0.0",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "file-saver": "^2.0.5",
     "vue": "^2.6.11",
     "vue-loading-overlay": "^3.4.2",
     "vue-router": "^3.5.1",
@@ -30,5 +31,9 @@
     "vue-cli-plugin-vuetify": "~2.1.0",
     "vue-template-compiler": "^2.6.11",
     "vuetify-loader": "^1.7.0"
+  },
+  "vetur": {
+    "tags": "src/plugins/vetur/tags.json",
+    "attributes": "src/plugins/vetur/attributes.json"
   }
 }
