commonモジュール作成。果物一覧のテンプレートを選択できるように改造

--- a/dynamic-excel-project/dynamic-excel-dependencies/pom.xml
+++ b/dynamic-excel-project/dynamic-excel-dependencies/pom.xml
@@ -81,6 +81,11 @@
 				<artifactId>dynamic-excel-autoconfigure</artifactId>
 				<version>${project.version}</version>
 			</dependency>
+			<dependency>
+				<groupId>com.github.gn5r</groupId>
+				<artifactId>dynamic-excel-common</artifactId>
+				<version>${project.version}</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 </project>
