--- a/dynamic-excel-project/pom.xml
+++ b/dynamic-excel-project/pom.xml
@@ -1,6 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
@@ -16,9 +14,10 @@
 	<name>dynamic-excel-project</name>
 
 	<modules>
-	<module>dynamic-excel-dependencies</module>
-	<module>dynamic-excel-autoconfigure</module>
-	<module>dynamic-excel</module>
+		<module>dynamic-excel-dependencies</module>
+		<module>dynamic-excel-autoconfigure</module>
+		<module>dynamic-excel</module>
+		<module>dynamic-excel-common</module>
 	</modules>
 
 	<build>
