--- a/dynamic-excel-client/package.json
+++ b/dynamic-excel-client/package.json
@@ -5,10 +5,12 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build --mode local",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "docgen": "node ./src/docgen.js"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.2",
+    "@gn5r/vue-axios": "^1.0.2",
     "@gn5r/vue-common-confirm": "^2.0.0",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
@@ -17,7 +19,8 @@
     "vue-loading-overlay": "^3.4.2",
     "vue-router": "^3.5.1",
     "vuetify": "^2.4.0",
-    "vuex": "^3.6.2"
+    "vuex": "^3.6.2",
+    "xlsx": "^0.16.9"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -29,6 +32,7 @@
     "sass": "^1.32.0",
     "sass-loader": "^10.0.0",
     "vue-cli-plugin-vuetify": "~2.1.0",
+    "vue-docgen-api": "^4.35.0",
     "vue-template-compiler": "^2.6.11",
     "vuetify-loader": "^1.7.0"
   },
