--- a/dynamic-excel-project/dynamic-excel/src/main/resources/application.properties
+++ b/dynamic-excel-project/dynamic-excel/src/main/resources/application.properties
@@ -3,6 +3,7 @@ server.port=8080
 server.servlet.context-path=/dynamic-excel
 
 application.base-package=com.github.gn5r.dynamic.excel.api
+application.name=dynamic-excel
 
 spring.datasource.url=jdbc:mysql://localhost:3306/EXCEL
 spring.datasource.username=excel
@@ -13,6 +14,11 @@ doma.dialect=mysql
 
 # log
 logging.level.com.github.gn5r.dynamic.excel=DEBUG
+logging.level.org.springframework.jdbc=DEBUG
+logging.level.org.doma.jdbc=DEBUG
 
 # H2 consoel
 spring.h2.console.enabled=false
+
+# Excelテンプレートディレクトリ
+excel.template.dir=/excel/template
